--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<!-- test -->
+<style>
+body {
+  background-image: url('img_girl.jpg');
+}
+</style>
+<!-- test -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
