--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- test -->
 <style>
 body {
-  background-image: url('img_girl.jpg');
+  background-image: url('background.jpg');
 }
 </style>
 <!-- test -->
