--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 body {
   background-image: url('background.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 </style>
 <!-- test -->
