--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- test -->
 <style>
 body {
-  background-image: url('backgoun.jpg');
+  background-image: url('backgroun.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
