--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Audio player</title>
+	<title>NXM list music</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -22,7 +22,7 @@ body {
 <div class="main">
     <!-- top section -->
     <div class="top_section">
-  		<h5>Audio Player&nbsp;&nbsp;<i class="fa fa-headphones" aria-hidden="true"></i></h5>
+  		<h5>NXM list music&nbsp;&nbsp;<i class="fa fa-headphones" aria-hidden="true"></i></h5>
   	</div>
 
 
@@ -58,7 +58,7 @@ body {
     <!--  popup music player part -->
     <div class="popup_music_player">
          <div class="top">
-    	    <p>Now Playing</p>
+    	    <p>Chill and Free</p>
     	    <i class="fa fa-chevron-down" aria-hidden="true" id="down_player"></i>
         </div>
         
