--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!-- test -->
+	
 <style>
 body {
   background-image: url('background.jpg');
@@ -9,8 +10,14 @@ body {
   background-size: 100% 100%;
 }
 </style>
+	
 <!-- test -->
 <head>
+<!-- test -->
+	
+	<LINK REL="SHORTCUT ICON"  HREF="logowhite.ico">
+		
+<!-- test -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>NXM list music</title>
