--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 <div class="main">
     <!-- top section -->
     <div class="top_section">
-	   	<a href="https://www.facebook.com/NguyenManh2k6/"><h5>NXM list music&nbsp;&nbsp;</a><i class="fa fa-headphones" aria-hidden="true"></i></h5>
+	   	<h5>NXM list music&nbsp;&nbsp;<a href="https://www.w3schools.com" target="_blank"><i class="fa fa-headphones" aria-hidden="true"></i></a></h5>
   	</div>
 
 
