--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ body {
 	    </div>
 
     	<div class="song_detail">
-    		<p id="song_name">Yêu một người có lẽ</p>
-    		<p id="artist_name">Mạnh đẹp trai</p>
+    		<p id="song_name">Em đéo biết nữa anh ơi</p>
+    		<p id="artist_name">7upercuts</p>
     	</div>
     	<i class="fa fa-chevron-up" aria-hidden="true" id="up_player"></i>
     </div>
@@ -74,8 +74,8 @@ body {
        </div>
 
        <div class="song_description">
-          <h3 id="current_track_name">Yêu một người có lẽ</h3>
-          <p id="current_singer_name">Mạnh đẹp trai</p>
+          <h3 id="current_track_name">Em đéo biết nữa anh ơi</h3>
+          <p id="current_singer_name">7upercuts</p>
        </div>
 
        <div class="controlls">
